deploy/kubernetes/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-sentinel
  namespace: kube-sentinel
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy-gateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /kube-sentinel
      backendRefs:
        - name: kube-sentinel
          port: 80
